# documentation

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  mkdocs-courses.yml  mkdocs.yml  package.json  pyproject.toml  wrangler.toml
.github/workflows/: deploy-courses.yml  deploy.yml  sync-osa-submodule.yml  sync-oscar-submodule.yml
courses/: index.md
courses/agentic-research/: index.md  week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md  week-08.md  week-09.md  week-10.md
courses/slides/agentic-research/week-01/: presentation.html  week-01.json
courses/slides/agentic-research/week-02/: week-02.json
courses/slides/agentic-research/week-03/: presentation.html  week-03.json
courses/slides/agentic-research/week-04/: week-04.json
docs/: index.md
docs/collective/: about.md  contributing.md  index.md  mission.md
docs/osa/: api-reference.md  architecture-details.md  architecture.md  cli-reference.md  development.md  getting-started.md  index.md  knowledge-sync.md  mirrors.md  status.md  troubleshooting.md  version-management.md
docs/osa/deployment/: widget.md
docs/osa/hed-assistant/: api.md  getting-started.md  index.md  usage.md
docs/osa/presentations/: index.md  osa-platform.md  uc-open-2026.md
docs/osa/registry/: extensions.md  index.md  local-testing.md  maintainer-merge.md  quick-start.md  schema-reference.md
docs/osa/tools/: bids.md  eeglab.md  hed.md  index.md  mne.md  nemar.md
overrides/: main.html
overrides/partials/: copyright.html
scripts/: gen_oscar.py  gen_ref_pages.py
(+174 files in other folders)
